app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phsamnang-uihomework-deployment
  labels:
    app: phsamnang-uihomework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phsamnang-uihomework
  template:
    metadata:
      labels:
        app: phsamnang-uihomework
    spec:
      containers:
        - name: phsamnang-uihomework
          image: kshrdautopilot/phsamnang-uihomework
          ports:
            - containerPort: 3000
