app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phsamnang-uihomework-svc
spec:
  selector:
    app: phsamnang-uihomework
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
